--- a/KEPALA_F407.ioc
+++ b/KEPALA_F407.ioc
@@ -13,27 +13,28 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=USART1
-Mcu.IP7=USART2
+Mcu.IP6=USART2
+Mcu.IP7=USART3
 Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PE9
 Mcu.Pin5=PB10
 Mcu.Pin6=PB11
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=15
+Mcu.Pin7=PD8
+Mcu.Pin8=PD9
+Mcu.Pin9=PD12
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -50,8 +51,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -60,8 +59,6 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
@@ -70,6 +67,12 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
 PE9.Signal=S_TIM1_CH1
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -142,10 +145,10 @@ TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
 TIM1.Period=1818-1
 TIM1.Prescaler=16800-1
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
